[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Particles/Blood.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Child/child.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Child.gd" type="Script" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[node name="Child" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Collisions" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collisions"]
shape = SubResource( 1 )

[node name="Blood" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]

[node name="Death" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Collisions" to="." method="_on_Collisions_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Death" to="." method="_on_Death_area_entered"]
